# OpenToken

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  factory_private.pem  factory_public.pem  pico_sdk_init.cmake
.agent/workflows/: build-run-app.md
boards/: tenstar_rp2350.h
docs/: architecture.md  architecture_map.md  estrutura_repositorio.md
forks/: patch_ykman_fork.py  setup_forks.ps1
host_tools/: apply_permanent_patch.py  factory_signer.py  opentoken_authenticator.py  opentoken_cli.py  opentoken_gui.py  opentoken_gui_pro.py  opentoken_legacy.py  opentoken_manager.py
host_tools/opentoken_sdk/: opentoken.py
include/: cbor_utils.h  ccid_device.h  ccid_engine.h  ctap2_engine.h  error_handling.h  error_handling_test.h  hsm_layer.h  led_status.h  libopentoken.h  mbedtls_config.h  oath_applet.h  openpgp_applet.h  opentoken.h  storage.h  tusb_config.h  yubikey_mgmt.h
libraries/libopentoken/: libopentoken.c
libraries/opentoken-dart/: .gitignore  README.md  opentoken_service.dart  pubspec.yaml
libraries/opentoken-dart/.dart_tool/: package_config.json  package_graph.json
libraries/opentoken-dart/.dart_tool/extension_discovery/: vs_code.json
libraries/opentoken-dart/lib/: opentoken_dart.dart  opentoken_service.dart
libraries/opentoken-dart/lib/transports/: transport_nfc.dart  transport_usb.dart  windows_hid_driver.dart
libraries/opentoken-dart/test/: security_test.dart
libraries/python-opentoken/: README.md  pyproject.toml
libraries/python-opentoken/src/opentoken/: __init__.py  core.py
libraries/python-opentoken/src/python_opentoken.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
opentoken_app/: .flutter-plugins-dependencies  LICENSE  README.md  android_nfc_config.xml.txt  ios_nfc_config.plist.txt  pubspec.yaml
opentoken_app/.dart_tool/: package_config.json  package_graph.json
opentoken_app/.dart_tool/extension_discovery/: vs_code.json
opentoken_app/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
opentoken_app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
opentoken_app/ios/Runner/: GeneratedPluginRegistrant.m
opentoken_app/lib/: main.dart  theme.dart
opentoken_app/lib/widgets/: add_credential_view.dart  code_detail_view.dart  credentials_view.dart  crypto_management_view.dart  device_status.dart  device_status_view.dart  premium_card.dart  settings_view.dart
opentoken_app/test/: security_ui_test.dart  widget_test.dart
opentoken_app/windows/: CMakeLists.txt
opentoken_app/windows/runner/: Runner.rc  main.cpp
src/: cbor_utils.c  ccid_device.c  ccid_engine.c  ctap2_engine.c  error_handling.c  error_handling_test.c  hsm_layer.c  led_status.c  main.c  oath_applet.c  openpgp_applet.c  otp_keyboard.c  storage.c  usb_descriptors.c  webusb_handler.c  ws2812.pio  yubikey_mgmt.c
src/non_secure/: ccid_device.c  ctap2_engine.c  main.c  oath_applet.c  openpgp_applet.c  usb_descriptors.c
src/secure/: hsm_layer.c  main_secure.c  otp_keyboard.c  storage.c
