[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-opentoken"
version = "1.0.0"
authors = [
  { name="OpenToken Project Team" },
]
description = "Official Python SDK for OpenToken Security Hardware"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyusb>=1.2.1",
    "pyscard>=2.0.7",
    "pyperclip>=1.8.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zequinha-taveira/OpenToken"
